--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -3,39 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/home.css">
     <title>Document</title>
+
+    <script>
+        // Función para abrir el popup
+        function openPopup() {
+            document.getElementById("overlay").style.display = "block";
+            document.getElementById("popup").style.display = "block";
+        }
+
+        // Función para cerrar el popup
+        function closePopup() {
+            document.getElementById("overlay").style.display = "none";
+            document.getElementById("popup").style.display = "none";
+        }
+    </script>
+
 </head>
 <body>
     <header>
         <h1>Bienvenido a Tutoriales para la Tercera Edad</h1>
-      </header>
-      <nav>
+    </header>
+    <nav>
         <ul>
-          <li><a href="home.html">Inicio</a></li>
-          <li><a href="tutoriales.html">Tutoriales</a></li>
-          <li><a href="#">Contacto</a></li>
+            <li><a href="home.html">Inicio</a></li>
+            <li><a href="tutoriales.html">Tutoriales</a></li>
+            <li><a onclick="openPopup()">Contacto</a></li>
         </ul>
-      </nav>
-      <main>
-        <p>Encuentra tutoriales sencillos para aprender a utilizar herramientas en Internet.</p>
-      </main>
-      <main class="card1" >
-        <h2>Tutoriales Disponibles</h2>
-        <ul>
-          <li><a href="tutorial1.html">Cómo enviar un correo electrónico</a></li>
-          <li><a href="#">Navegación en la web</a></li>
-          <!-- Agrega más tutoriales aquí -->
-        </ul>
-      </main>
+    </nav>
 
-      <main class="card1" >
+    <div>
+        <p>Encuentra tutoriales sencillos para aprender a utilizar herramientas en Internet.</p>
+    </div>
+
+    <!--<div id="card1" class="card1">
         <h2>Tutoriales Disponibles</h2>
         <ul>
-          <li><a href="tutorial1.html">Cómo enviar un correo electrónico</a></li>
-          <li><a href="#">Navegación en la web</a></li>
-          <!-- Agrega más tutoriales aquí -->
-        </ul>
-      </main>
+            <li><a href="tutorial1.html">Cómo enviar un correo electrónico</a></li>
+            <li><a href="#">Navegación en la web</a></li>-->
+    <!-- Agrega más tutoriales aquí -->
+    <!--</ul>
+    </div>
+
+    <div id="card2" class="card1">
+        <h2>Tutoriales Disponibles</h2>
+        <ul>
+            <li><a href="tutorial1.html">Cómo enviar un correo electrónico</a></li>
+            <li><a href="#">Navegación en la web</a></li>-->
+    <!-- Agrega más tutoriales aquí -->
+    <!--</ul>
+    </div>-->
+
+    <section>
+        <article class="card1">
+            <h2>Clave de Seguridad Social</h2>
+
+            <iframe src="../Videos/TUTORIAL_ Clave de la Seguridad Social.mp4" frameborder="0"></iframe>
+
+        </article>
+
+        <article class="card1">
+            <h2>Tutorial 2</h2>
+        </article>
+
+        <article class="card1">
+            <h2>Tutorial 3</h2>
+        </article>
+
+    </section>
+
+
+
+
+    <!-- Formulario popup -->
+    <div class="overlay" id="overlay"></div>
+    <div class="popup" id="popup">
+        <button class="close-popup-button" onclick="closePopup()">X</button>
+        <h2>Formulario de Contacto</h2>
+
+        <form action="https://formspree.io/f/moqorwro" method="POST">
+            <label>
+                Nombre:
+                <input type="text" name="nombre" required>
+            </label>
+
+            <label>
+                Mail:
+                <input type="email" name="email" required>
+            </label>
+            <label>
+                Mensaje:
+                <textarea name="message" required></textarea>
+            </label>
+            <!-- your other form fields go here -->
+            <button class="button-enviar" type="submit">Enviar</button>
+        </form>
+
+    </div>
+
+
+
 </body>
 </html>
