Agregando cambios y diseños a la página.
Logo, favicon, entre otras.

--- a/Tecnología para la Tercera Edad/tutoriales.html
+++ b/Tecnología para la Tercera Edad/tutoriales.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/tutoriales.css">
+    <link rel="icon" href="img/FAVICON.png" type="image/x-icon">
     <title>Document</title>
 </head>
 <body>
@@ -24,5 +25,11 @@
       <a href="#">Cómo Navegar en una página web</a>
       <button class="entrar">Entrar</button>
     </ul>
+
+    <ul class="card1">
+      <a href="tutorialCG.html">Cómo Crear una cuenta en Google</a>
+      <button class="entrar">Entrar</button>
+    </ul>
+
 </body>
 </html>
