--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="icon" href="img/FAVICON.png" type="image/x-icon">
     <title>Document</title>
 
     <script>
@@ -22,9 +23,12 @@
 
 </head>
 <body>
-    <header>
-        <h1>Bienvenido a Tutoriales para la Tercera Edad</h1>
-    </header>
+        <header>
+            <div class="logo">
+                <img src="img/Frame 1.png" alt="Descripción del logo">
+            </div>
+            <h1>Un Espacio para acercarte a la Tecnología</h1>
+        </header>
     <nav>
         <ul>
             <li><a href="home.html">Inicio</a></li>
