--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -54,9 +54,11 @@
             </ul>
         </nav>
     </header>
-    <div>
-        <h2>Convertimos abuelos<br>En expertos digitales</h2>
-        <p>Encuentra tutoriales sencillos para aprender a utilizar herramientas en Internet.</p>
+    <div class="descripcion">
+        <h2 class="descripcion__h2">Convertimos abuelos<br>En expertos digitales</h2>
+        <p class="descripcion__p">¡Bienvenidos a GrandTech, tu aliado digital para una vida más sencilla y conectada. Como el nieto digital que siempre quisiste, te convertiremos en un experto digital en cuestión de semanas. Aprende a dominar tu smartphone, navegar por la web,
+            gestionar tu correo electrónico, tomar fotos y mucho más, con la ayuda de nuestros amigables expertos. Simplifica tu vida y disfruta al máximo de la tecnología. Únete a GrandTech y descubre un mundo de posibilidades digitales. ¡Regístrate
+            hoy y abraza el futuro con confianza!</p>
     </div>
 
     <!--<div id="card1" class="card1">
