--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="icon" href="img/FAVICON.png" type="image/x-icon">
     <title>Document</title>
 
     <script>
@@ -22,9 +23,12 @@
 
 </head>
 <body>
-    <header>
-        <h1>Bienvenido a Tutoriales para la Tercera Edad</h1>
-    </header>
+        <header>
+            <div class="logo">
+                <img src="img/Frame 1.png" alt="Descripción del logo">
+            </div>
+            <h1>Un Espacio para acercarte a la Tecnología</h1>
+        </header>
     <nav>
         <ul>
             <li><a href="home.html">Inicio</a></li>
@@ -64,11 +68,15 @@
         </article>
 
         <article class="card1">
-            <h2>Tutorial 2</h2>
+            <h2>¿Quiénes Somos?</h2>
         </article>
 
         <article class="card1">
-            <h2>Tutorial 3</h2>
+            <h2>Noticias</h2>
+        </article>
+
+        <article class="card1">
+            <h2>Aprender es un derecho y es posible.</h2>
         </article>
 
     </section>
@@ -99,10 +107,31 @@
             <!-- your other form fields go here -->
             <button class="button-enviar" type="submit">Enviar</button>
         </form>
-
     </div>
 
-
+            <!-- Footer -->
+    <footer> 
+        <div class="buscador">
+            <form action="/buscar" method="get">
+                <input type="text" name="q" placeholder="Buscar...">
+                <button type="submit">Buscar</button>
+            </form>
+        </div>
+        <div class="contactos">
+            <ul>
+                <li><a href="https://wa.me/TUNUMERO" target="_blank">WhatsApp</a></li>
+                <li><a href="mailto:tucorreo@gmail.com">Correo Electrónico</a></li>
+            </ul>
+        </div>
+        <div class="redes-sociales">
+            <ul>
+                <li><a href="URL_de_Tu_Facebook" target="_blank">Facebook</a></li>
+                <li><a href="URL_de_Tu_Twitter" target="_blank">Twitter</a></li>
+                <!-- Agrega más redes sociales según sea necesario -->
+            </ul>
+        </div>
+       
+    </footer>
 
 </body>
 </html>
