--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="icon" href="img/FAVICON.png" type="image/x-icon">
-    <title>Document</title>
+    <title>GranTech</title>
 
     <script>
         // Función para abrir el popup
