Commit de lo hecho desde ayer hasta hoy.

--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/home.css">
-    <link rel="icon" href="img/FAVICON.png" type="image/x-icon">
     <title>Document</title>
 
     <script>
@@ -68,11 +67,15 @@
         </article>
 
         <article class="card1">
-            <h2>Tutorial 2</h2>
+            <h2>¿Quiénes Somos?</h2>
         </article>
 
         <article class="card1">
-            <h2>Tutorial 3</h2>
+            <h2>Noticias</h2>
+        </article>
+
+        <article class="card1">
+            <h2>Aprender es un derecho y es posible.</h2>
         </article>
 
     </section>
