--- a/Tecnología para la Tercera Edad/tutoriales.html
+++ b/Tecnología para la Tercera Edad/tutoriales.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenido a Tutoriales para la Tercera Edad</h1>
+      <div class="logo">
+        <img src="img/Frame 1.png" alt="Descripción del logo">
+    </div>
+        <h1>Bienvenidos a la Sección de Tutoriales</h1>
       </header>
       <nav>
         <ul>
@@ -30,5 +33,66 @@
       <a href="tutorialCG.html">Cómo Crear una cuenta en Google</a>
       <button class="entrar">Entrar</button>
     </ul>    
+
+
+    <ul class="card1">
+      <a href="tutorialCG.html">Cómo Crear una cuenta en Google</a>
+      <button class="entrar">Entrar</button>
+    </ul>  
+
+    <ul class="card1">
+      <a href="tutorialCG.html">Cómo Crear una cuenta en Google</a>
+      <button class="entrar">Entrar</button>
+    </ul>  
+
+    <ul class="card1">
+      <a href="tutorialCG.html">Cómo Crear una cuenta en Google</a>
+      <button class="entrar">Entrar</button>
+    </ul>  
+
+    <ul class="card1">
+      <a href="tutorialCG.html">Cómo Crear una cuenta en Google</a>
+      <button class="entrar">Entrar</button>
+    </ul>  
+
+    <ul class="card1">
+      <a href="tutorialCG.html">Cómo Crear una cuenta en Google</a>
+      <button class="entrar">Entrar</button>
+    </ul>  
+
+    <ul class="card1">
+      <a href="tutorialCG.html">Cómo Crear una cuenta en Google</a>
+      <button class="entrar">Entrar</button>
+    </ul>  
+  
+    <ul class="card1">
+      <a href="tutorialCG.html">Cómo Crear una cuenta en Google</a>
+      <button class="entrar">Entrar</button>
+    </ul>  
+
+
+    <footer> 
+      <div class="buscador">
+          <form action="/buscar" method="get">
+              <input type="text" name="q" placeholder="Buscar...">
+              <button type="submit">Buscar</button>
+          </form>
+      </div>
+      <div class="contactos">
+          <ul>
+              <li><a href="https://wa.me/TUNUMERO" target="_blank">WhatsApp</a></li>
+              <li><a href="mailto:tucorreo@gmail.com">Correo Electrónico</a></li>
+          </ul>
+      </div>
+      <div class="redes-sociales">
+          <ul>
+              <li><a href="URL_de_Tu_Facebook" target="_blank">Facebook</a></li>
+              <li><a href="URL_de_Tu_Twitter" target="_blank">Twitter</a></li>
+              <!-- Agrega más redes sociales según sea necesario -->
+          </ul>
+      </div>
+     
+  </footer>
+    
 </body>
 </html>
