--- a/Tecnología para la Tercera Edad/tutorialCG.html
+++ b/Tecnología para la Tercera Edad/tutorialCG.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/tutorialCG.css">
     <link rel="icon" href="img/FAVICON.png" type="image/x-icon">
-    <title>Document</title>
+    <title>GranTech</title>
 </head>
 <body>
     <header>
@@ -48,7 +48,11 @@
             
                <h4>Ahora tienes una cuenta de Google y acceso a servicios como Gmail, Google Drive y Google Calendar. Recuerda que tu dirección de correo electrónico y contraseña son importantes para acceder a tu cuenta en el futuro, así que guárdalas en un lugar seguro. </h4> 
         </p>
+
         <a href="https://www.youtube.com/watch?v=Hx42K68jzz0" target="_blank">tutorial en youtube</a>
+
+        <h3>Video: <a href="https://www.youtube.com/watch?v=Hx42K68jzz0" target="_blank">Visite este canal en para reforzar el tutorial</a></h3>
+
 
         <!-- Agrega más pasos e instrucciones aquí -->
       </main>
