Comit para los cambios hechos

--- a/Tecnología para la Tercera Edad/tutorialCG.html
+++ b/Tecnología para la Tercera Edad/tutorialCG.html
@@ -9,13 +9,16 @@
 </head>
 <body>
     <header>
+      <div class="logo">
+        <img src="img/Frame 1.png" alt="Descripción del logo">
+    </div>
         <h1>Tutorial: Cómo Crear una cuenta de Google</h1>
       </header>
       <nav>
         <ul>
           <li><a href="home.html">Inicio</a></li>
           <li><a href="tutoriales.html">Tutoriales</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="#">Contacto</a></li>
         </ul>
       </nav>
       <main>
@@ -48,6 +51,9 @@
             
                <h4>Ahora tienes una cuenta de Google y acceso a servicios como Gmail, Google Drive y Google Calendar. Recuerda que tu dirección de correo electrónico y contraseña son importantes para acceder a tu cuenta en el futuro, así que guárdalas en un lugar seguro. </h4> 
         </p>
+        <h3>Video: <a href="https://www.youtube.com/watch?v=Hx42K68jzz0" target="_blank">Visite este canal en youtube para reforzar el tutorial</a></h3>
+        
+
         <!-- Agrega más pasos e instrucciones aquí -->
       </main>
 </body>
