--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="icon" href="img/FAVICON.png" type="image/x-icon">
-    <title>GrandTech!</title>
+    <title>GranTech</title>
 
     <script>
         // Función para abrir el popup
@@ -41,24 +41,22 @@
 </head>
 
 <body>
-    <header>
-        <h1 class="header__h1">GrandTech!</h1>
-        <div class="logo">
-            <img src="img/Frame 1.png" alt="Descripción del logo">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="home.html">Inicio</a></li>
-                <li><a href="tutoriales.html">Tutoriales</a></li>
-                <li><a onclick="openPopup()">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div class="descripcion">
-        <h2 class="descripcion__h2">Convertimos abuelos<br>En expertos digitales</h2>
-        <p class="descripcion__p">¡Bienvenidos a GrandTech, tu aliado digital para una vida más sencilla y conectada. Como el nieto digital que siempre quisiste, te convertiremos en un experto digital en cuestión de semanas. Aprende a dominar tu smartphone, navegar por la web,
-            gestionar tu correo electrónico, tomar fotos y mucho más, con la ayuda de nuestros amigables expertos. Simplifica tu vida y disfruta al máximo de la tecnología. Únete a GrandTech y descubre un mundo de posibilidades digitales. ¡Regístrate
-            hoy y abraza el futuro con confianza!</p>
+        <header>
+            <div class="logo">
+                <img src="img/Frame 1.png" alt="Descripción del logo">
+            </div>
+            <h1>Un Espacio para acercarte a la Tecnología</h1>
+        </header>
+    <nav>
+        <ul>
+            <li><a href="home.html">Inicio</a></li>
+            <li><a href="tutoriales.html">Tutoriales</a></li>
+            <li><a onclick="openPopup()">Contacto</a></li>
+        </ul>
+    </nav>
+
+    <div>
+        <p>Encuentra tutoriales sencillos para aprender a utilizar herramientas en Internet.</p>
     </div>
 
     <!--<div id="card1" class="card1">
@@ -88,11 +86,15 @@
         </article>
 
         <article class="card1">
-            <h2>Tutorial 2</h2>
+            <h2>¿Quiénes Somos?</h2>
         </article>
 
         <article class="card1">
-            <h2>Tutorial 3</h2>
+            <h2>Noticias</h2>
+        </article>
+
+        <article class="card1">
+            <h2>Aprender es un derecho y es posible.</h2>
         </article>
 
     </section>
@@ -123,10 +125,31 @@
             <!-- your other form fields go here -->
             <button class="button-enviar" type="submit">Enviar</button>
         </form>
-
     </div>
 
-
+            <!-- Footer -->
+    <footer> 
+        <div class="buscador">
+            <form action="/buscar" method="get">
+                <input type="text" name="q" placeholder="Buscar...">
+                <button type="submit">Buscar</button>
+            </form>
+        </div>
+        <div class="contactos">
+            <ul>
+                <li><a href="https://wa.me/TUNUMERO" target="_blank">WhatsApp</a></li>
+                <li><a href="mailto:tucorreo@gmail.com">Correo Electrónico</a></li>
+            </ul>
+        </div>
+        <div class="redes-sociales">
+            <ul>
+                <li><a href="URL_de_Tu_Facebook" target="_blank">Facebook</a></li>
+                <li><a href="URL_de_Tu_Twitter" target="_blank">Twitter</a></li>
+                <!-- Agrega más redes sociales según sea necesario -->
+            </ul>
+        </div>
+       
+    </footer>
 
 </body>
 
