Actualización de Estilos, Fuentes y Elementos en la Página de Inicio
En este commit, se han realizado modificaciones en la página de inicio del sitio web. Se han actualizado las fuentes utilizadas, utilizando 'Josefin Sans' como fuente principal y 'Agbalumo' para el título. Además, se han realizado ajustes en los estilos del encabezado y la sección de descripción. Se ha añadido un fondo de degradado al encabezado y se ha implementado un efecto de pegajosidad (sticky) al encabezado al hacer scroll. Se han efectuado mejoras en la presentación del contenido de la descripción y se ha añadido un efecto de escala en la imagen del logotipo al pasar el mouse sobre ella. Además, se ha actualizado el elemento de video para que se muestre correctamente en la página de inicio.

--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="icon" href="img/FAVICON.png" type="image/x-icon">
     <title>GrandTech!</title>
-
+    <!--Fuente Agbalumo utilizada en el título-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap" rel="stylesheet">
+    <!--Fuete Josefina Sans utilizada en todo el documento-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <script>
         // Función para abrir el popup
         function openPopup() {
@@ -41,24 +48,28 @@
 </head>
 
 <body>
-    <header>
-        <h1 class="header__h1">GrandTech!</h1>
-        <div class="logo">
-            <img src="img/Frame 1.png" alt="Descripción del logo">
+    <div class="encabezado">
+        <header>
+            <h1 class="header__h1">GrandTech!</h1>
+            <div class="logo">
+                <img src="img/Frame 1.png" alt="Descripción del logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="home.html">Inicio</a></li>
+                    <li><a href="tutoriales.html">Tutoriales</a></li>
+                    <li><a onclick="openPopup()">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="descripcion">
+            <h2 class="descripcion__h2">Convertimos abuelos<br>En expertos digitales</h2>
+            <p class="descripcion__p">¡Bienvenidos a GrandTech, tu aliado digital para una vida más sencilla y conectada.
+                <br>Como el nieto digital que siempre quisiste, te convertiremos en un experto digital en cuestión de semanas.
+                <br>Aprende a dominar tu smartphone, navegar por la web, gestionar tu correo electrónico, tomar fotos y mucho más, con la ayuda de nuestros amigables expertos.
+                <br>Simplifica tu vida y disfruta al máximo de la tecnología. Únete a GrandTech y descubre un mundo de posibilidades digitales. ¡Regístrate hoy y abraza el futuro con confianza!
+            </p>
         </div>
-        <nav>
-            <ul>
-                <li><a href="home.html">Inicio</a></li>
-                <li><a href="tutoriales.html">Tutoriales</a></li>
-                <li><a onclick="openPopup()">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div class="descripcion">
-        <h2 class="descripcion__h2">Convertimos abuelos<br>En expertos digitales</h2>
-        <p class="descripcion__p">¡Bienvenidos a GrandTech, tu aliado digital para una vida más sencilla y conectada. Como el nieto digital que siempre quisiste, te convertiremos en un experto digital en cuestión de semanas. Aprende a dominar tu smartphone, navegar por la web,
-            gestionar tu correo electrónico, tomar fotos y mucho más, con la ayuda de nuestros amigables expertos. Simplifica tu vida y disfruta al máximo de la tecnología. Únete a GrandTech y descubre un mundo de posibilidades digitales. ¡Regístrate
-            hoy y abraza el futuro con confianza!</p>
     </div>
 
     <!--<div id="card1" class="card1">
@@ -83,7 +94,10 @@
         <article class="card1">
             <h2>Clave de Seguridad Social</h2>
 
-            <iframe src="../Videos/TUTORIAL_ Clave de la Seguridad Social.mp4" frameborder="0"></iframe>
+            <video width="320" height="240" controls>
+                <source src="../Videos/TUTORIAL_ Clave de la Seguridad Social.mp4" type="video/mp4">
+                Tu navegador no soporta el elemento de video.
+            </video>
 
         </article>
 
