--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="icon" href="img/FAVICON.png" type="image/x-icon">
     <title>GranTech</title>
+    <!--bootstrap-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,6 +18,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Changa+One&family=Josefin+Sans:ital,wght@1,700&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
 
     <!-- JavaScript para PopUp y cambio de estilos en el encabezado -->
     <script>
@@ -62,7 +68,8 @@
         </header>
         <div class="descripcion">
             <div descripcion__div>
-                <h2 class="descripcion__div--h2">Convertimos abuelos<br><span class="mark">En expertos digitales</span></h2>
+                <h2 class="descripcion__div--h2">Convertimos abuelos</h2>
+                <h2 class="amarilla">En expertos digitales</h2>
                 <ul class="descripcion__div--ul">
                     <li class="descripcion__li">¡Bienvenidos a GrandTech, tu aliado digital.</li>
                     <li class="descripcion__li ">Como el nieto digital que siempre quisiste, te convertiremos en un experto digital en cuestión de semanas.</li>
@@ -74,93 +81,99 @@
         </div>
     </div>
 
-    <!-- Sección de tutoriales (comentada por ser contenido faltante) -->
-    <!--<div id="card1 " class="card1 ">
-        <h2>Tutoriales Disponibles</h2>
-        <ul>
-            <li><a href="tutorial1.html ">Cómo enviar un correo electrónico</a></li>
-            <li><a href="# ">Navegación en la web</a></li>-->
-    <!-- Agrega más tutoriales aquí -->
-    <!--</ul>
-    </div>
+    <main>
+        <h1>Encuentra tutoriales sencillos para aprender a utilizar herramientas en Internet.</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/imagenes/clave_seguridad_social.png" width="300" height="200" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Clave de Seguridad Social</h5>
+                            <p class="card-text">Crea tu clave de seguridad social</p>
+                            <a href="tutorial1.html" class="btn btn-success">VER</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/imagenes/Credito.png" class="card-img-top" width="300" height="200" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Crédito</h5>
+                            <p class="card-text">Solicitar Crédito para jubilados y pensionados</p>
+                            <a href="tutorial2.html" class="btn btn-success">VER</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/imagenes/Credito.png" class="card-img-top" width="300" height="200" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Consulta Expediente</h5>
+                            <p class="card-text">Solicitar Expediente</p>
+                            <a href="tutorial3.html" class="btn btn-success">VER</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
-    <!-- Sección de tutoriales (comentada por ser contenido faltante) -->
-    <!--<div id="card2 " class="card1 ">
-        <h2>Tutoriales Disponibles</h2>
-        <ul>
-            <li><a href="tutorial1.html ">Cómo enviar un correo electrónico</a></li>
-            <li><a href="# ">Navegación en la web</a></li>-->
-    <!-- Agrega más tutoriales aquí -->
-    <!--</ul>
-    </div>-->
 
-    <!-- Sección de contenido principal -->
-    <section>
-        <article class="card1 ">
-            <h2>Clave de Seguridad Social</h2>
-            <video width="320 " height="240 " controls>
-                <source src="../Videos/TUTORIAL_ Clave de la Seguridad Social.mp4 " type="video/mp4 ">
-                Tu navegador no soporta el elemento de video.
-            </video>
-        </article>
 
-        <article class="card1 ">
-            <h2>¿Quiénes Somos?</h2>
-        </article>
 
-        <article class="card1 ">
-            <h2>Noticias</h2>
-        </article>
 
-        <article class="card1 ">
-            <h2>Aprender es un derecho y es posible.</h2>
-        </article>
-    </section>
 
     <!-- Formulario popup -->
-    <div class="overlay " id="overlay "></div>
-    <div class="popup " id="popup ">
-        <button class="close-popup-button " onclick="closePopup() ">X</button>
-        <h2>Formulario de Contacto</h2>
-        <form action="https://formspree.io/f/moqorwro " method="POST ">
-            <label>
-                Nombre:
-                <input type="text " name="nombre " required>
-            </label>
-            <label>
-                Mail:
-                <input type="email " name="email " required>
-            </label>
-            <label>
-                Mensaje:
-                <textarea name="message " required></textarea>
-            </label>
-            <button class="button-enviar " type="submit ">Enviar</button>
-        </form>
-    </div>
+    <div class="overlay" id="overlay"></div>
+    <div>
+        <div class="popup" id="popup">
+            <button class="close-popup-button" onclick="closePopup()">X</button>
+            <h2>Formulario de Contacto</h2>
 
-    <!-- Footer -->
-    <footer>
-        <div class="buscador ">
-            <form action="/buscar " method="get ">
-                <input type="text " name="q " placeholder="Buscar... ">
-                <button type="submit ">Buscar</button>
+            <form action="https://formspree.io/f/moqorwro" method="POST">
+                <label>
+                Nombre:
+                <input type="text" name="nombre" required>
+            </label>
+
+                <label>
+                Mail:
+                <input type="email" name="email" required>
+            </label>
+                <label>
+                Mensaje:
+                <textarea name="message" required></textarea>
+            </label>
+                <!-- your other form fields go here -->
+                <button class="button-enviar" type="submit">Enviar</button>
             </form>
         </div>
-        <div class="contactos ">
-            <ul>
-                <li><a href="https://wa.me/TUNUMERO " target="_blank ">WhatsApp</a></li>
-                <li><a href="mailto:tucorreo@gmail.com ">Correo Electrónico</a></li>
-            </ul>
-        </div>
-        <div class="redes-sociales ">
-            <ul>
-                <li><a href="URL_de_Tu_Facebook " target="_blank ">Facebook</a></li>
-                <li><a href="URL_de_Tu_Twitter " target="_blank ">Twitter</a></li>
-                <!-- Agrega más redes sociales según sea necesario -->
-            </ul>
-        </div>
-    </footer>
+
+        <!-- Footer -->
+        <footer>
+            <div class="buscador">
+                <form action="/buscar" method="get">
+                    <input type="text" name="q" placeholder="Buscar...">
+                    <button type="submit">Buscar</button>
+                </form>
+            </div>
+            <div class="contactos">
+                <ul>
+                    <li><a href="https://wa.me/TUNUMERO" target="_blank">WhatsApp</a></li>
+                    <li><a href="mailto:tucorreo@gmail.com">Correo Electrónico</a></li>
+                </ul>
+            </div>
+            <div class="redes-sociales">
+                <ul>
+                    <li><a href="URL_de_Tu_Facebook" target="_blank">Facebook</a></li>
+                    <li><a href="URL_de_Tu_Twitter" target="_blank">Twitter</a></li>
+                    <!-- Agrega más redes sociales según sea necesario -->
+                </ul>
+            </div>
+
+        </footer>
+
 </body>
 
 </html>
