--- a/Tecnología para la Tercera Edad/tutorial2.html
+++ b/Tecnología para la Tercera Edad/tutorial2.html
@@ -44,18 +44,27 @@
   <main class="Contenedor p-5">
     <div>
       <div class="titulo p-5">
-        <h1>¿Que es la clave de Seguridad Social?</h1>
+        <h1>Cómo Solicitar un Crédito de ANSES</h1>
       </div>
       <div>
-        <iframe width="560" height="315" src="/Videos/TUTORIAL_ Clave de la Seguridad Social.mp4" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="/Videos/Y2meta.app - ¿CÓMO SOLICITAR UN CRÉDITO ANSES PARA JUBILACIONES Y PENSIONES.mp4" frameborder="0" allowfullscreen></iframe>
         <p class="p-5">Descripción del Video:</p>
         <ol>
-          <li>Accede a la página web de ANSES.</li>
-          <li>Selecciona la opción "crear" para obtener la Clave de la Seguridad Social.</li>
-          <li>Ingresa tu información personal, incluyendo tu número de identificación y datos de contacto.</li>
-          <li>Crea una contraseña segura para tu Clave de la Seguridad Social.</li>
-          <li>Completa los pasos necesarios de verificación de información.</li>
-          <li>ANSES confirmará que tu Clave de la Seguridad Social ha sido creada con éxito.</li>
+            <li>Ingresa al sitio web de ANSES.</li>
+            <li>Haz clic en el botón "Solicitar un crédito".</li>
+            <li>Ingresa tu número de seguro social y el código de seguridad en el menú.</li>
+            <li>Selecciona la opción "Créditos".</li>
+            <li>Asegúrate de tener tu último DNI y datos de contacto actualizados.</li>
+            <li>Elige algunas de las opciones o ingresa manualmente el monto y la cantidad de pagos para calcular tu crédito.</li>
+            <li>Haz clic en "Calcular Cuotas" y verifica si estás de acuerdo con los términos del crédito.</li>
+            <li>Selecciona la opción para solicitar un crédito y verifica nuevamente tu información de contacto actualizada.</li>
+            <li>Se enviará un código de validación a tu dirección de correo electrónico, que deberás confirmar.</li>
+            <li>Después de confirmar, ingresa el número de tu trámite de correo electrónico y presiona el botón "Confirmar".</li>
+            <li>Asegúrate de que tus datos sean correctos y ratifica los términos de la declaración jurada.</li>
+            <li>Una vez que hayas terminado, haz clic en "Confirmar" y consulta las condiciones financieras.</li>
+            <li>Si estás de acuerdo con ellas, confirma la declaración jurada y presiona "Confirmar".</li>
+            <li>Finalmente, revisa las condiciones de tu crédito y utiliza todas las opciones para enviar la solicitud.</li>
+            <li>Tu solicitud ya ha sido enviada exitosamente y puedes descargar un certificado con toda la información sobre tu crédito.</li>
         </ol>
         
       </div>
