--- a/Tecnología para la Tercera Edad/tutorial3.html
+++ b/Tecnología para la Tercera Edad/tutorial3.html
@@ -44,18 +44,20 @@
   <main class="Contenedor p-5">
     <div>
       <div class="titulo p-5">
-        <h1>¿Que es la clave de Seguridad Social?</h1>
+        <h1>Cómo Consultar ANSES - Pasos a Seguir</h1>
       </div>
       <div>
-        <iframe width="560" height="315" src="/Videos/TUTORIAL_ Clave de la Seguridad Social.mp4" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="/Videos/Y2meta.app-como consultar expediente ANSES Jubulaciones y pensiones-(480p).mp4" frameborder="0" allowfullscreen></iframe>
         <p class="p-5">Descripción del Video:</p>
         <ol>
-          <li>Accede a la página web de ANSES.</li>
-          <li>Selecciona la opción "crear" para obtener la Clave de la Seguridad Social.</li>
-          <li>Ingresa tu información personal, incluyendo tu número de identificación y datos de contacto.</li>
-          <li>Crea una contraseña segura para tu Clave de la Seguridad Social.</li>
-          <li>Completa los pasos necesarios de verificación de información.</li>
-          <li>ANSES confirmará que tu Clave de la Seguridad Social ha sido creada con éxito.</li>
+            <li>Ingresa al sitio web de Google.</li>
+            <li>Escribe "ANSES" en la barra de búsqueda y haz clic en el enlace que aparece.</li>
+            <li>Selecciona "Jubilaciones y Pensiones" o "Consulta de Expediente" para encontrar información sobre tu problema específico.</li>
+            <li>Ten en cuenta que la información en ANSES se actualiza cada 25 días.</li>
+            <li>Consulta el estado de tu solicitud de prestaciones como se muestra en el ejemplo.</li>
+            <li>Recuerda que ANSES no puede rechazar tu monotributo o asignación familiar, que están relacionados con los beneficios de jubilación o pensión.</li>
+            <li>Si deseas consultar ANSES en Google, escribe "Consultar Expediente ANSES" en la barra de búsqueda y haz clic en el enlace correspondiente.</li>
+            <li>Es importante comprender el idioma francés y hacer clic en el enlace adecuado.</li>
         </ol>
         
       </div>
