--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -10,7 +10,7 @@
     <!--bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!-- Fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -158,18 +158,23 @@
                     <button type="submit">Buscar</button>
                 </form>
             </div>
-            <div class="contactos">
-                <ul>
-                    <li><a href="https://wa.me/TUNUMERO" target="_blank">WhatsApp</a></li>
-                    <li><a href="mailto:tucorreo@gmail.com">Correo Electrónico</a></li>
-                </ul>
-            </div>
-            <div class="redes-sociales">
-                <ul>
-                    <li><a href="URL_de_Tu_Facebook" target="_blank">Facebook</a></li>
-                    <li><a href="URL_de_Tu_Twitter" target="_blank">Twitter</a></li>
-                    <!-- Agrega más redes sociales según sea necesario -->
-                </ul>
+            <div class="contactos-redes">
+                <div class="contactos">
+                    <ul>
+
+                        <li>
+                            <a href="https://wa.me/TUNUMERO" target="_blank"> <i class="bi bi-whatsapp"></i>WhatsApp</a>
+                        </li>
+                        <li><a href="mailto:tucorreo@gmail.com"><i class="bi bi-envelope-fill"></i>Correo Electrónico</a></li>
+                    </ul>
+                </div>
+                <div class="redes-sociales">
+                    <ul>
+                        <li><a href="URL_de_Tu_Facebook" target="_blank"><i class="bi bi-facebook"></i>Facebook</a></li>
+                        <li><a href="URL_de_Tu_Twitter" target="_blank"><i class="bi bi-twitter-x"></i>Twitter</a></li>
+                        <!-- Agrega más redes sociales según sea necesario -->
+                    </ul>
+                </div>
             </div>
 
         </footer>
