Cambio de imagen de la portada por un vector y otras pequeñas actualizaciones

--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -71,13 +71,14 @@
                 <h2 class="descripcion__div--h2">Convertimos abuelos</h2>
                 <h2 class="amarilla">En expertos digitales</h2>
                 <ul class="descripcion__div--ul">
-                    <li class="descripcion__li">¡Bienvenidos a GrandTech, tu aliado digital.</li>
+                    <li class="descripcion__li">¡Bienvenidos a GrandTech, tu aliado digital!</li>
                     <li class="descripcion__li ">Como el nieto digital que siempre quisiste, te convertiremos en un experto digital en cuestión de semanas.</li>
-                    <li class="descripcion__li ">Aprende a dominar tu smartphone, navegar por la web, gestionar tu correo electrónico, tomar fotos y mucho más, con la ayuda de nuestros amigables expertos.</li>
-                    <li class="descripcion__li ">Simplifica tu vida y disfruta al máximo de la tecnología. Únete a GrandTech y descubre un mundo de posibilidades digitales. ¡Regístrate hoy y abraza el futuro con confianza!</li>
+                    <li class="descripcion__li ">Aprende a dominar tu smartphone, navegar por la web, gestionar tu correo electrónico, tomar fotos y mucho más, con la recopilación de increíbles tutoriales.</li>
+                    <li class="descripcion__li ">Simplifica tu vida y disfruta al máximo de la tecnología. Únete a GrandTech y descubre un mundo de posibilidades digitales.</li>
+                    <button class="descripcion__li boton-registro">¡Regístrate hoy y abraza el futuro con confianza!</button>
                 </ul>
             </div>
-            <img class="descripcion__img" src="./img/pexels-photo-3823489.jpeg" alt="Nieta ayudando a su abuelo frente a una laptop">
+            <img class="descripcion__img" src="./img/abuelos-portada.svg" alt="Nieta ayudando a su abuelo frente a una laptop">
         </div>
     </div>
 
